Fix image sizing on mobile devices

--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ header{
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 35% center;
+    background-position: 35% 50%;
     background-attachment: fixed;
     position: relative;
 }
